--- a/index.html
+++ b/index.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>ACM ROCS 2024 - Research Opportunities in Computer Science | IIIT Kottayam</title>
-      <meta name="description" content="Join ACM ROCS 2024 at IIIT Kottayam - A premier workshop on Research Opportunities in Computer Science. September 26-27, 2024. Expert speakers, workshops, and networking." />
-    <meta name="author" content="Lovable" />
 
-    <meta property="og:title" content="ACM ROCS 2024 - Research Opportunities in Computer Science" />
-    <meta property="og:description" content="Join ACM ROCS 2024 at IIIT Kottayam - A premier workshop on Research Opportunities in Computer Science. September 26-27, 2024." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>ACM ROCS 2024 - Research Opportunities in Computer Science | BMSCE</title>
+  <meta name="description"
+    content="Join ACM ROCS 2024 at IIIT Kottayam - A premier workshop on Research Opportunities in Computer Science. September 26-27, 2024. Expert speakers, workshops, and networking." />
+  <meta name="author" content="Lovable" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
+  <meta property="og:title" content="ACM ROCS 2024 - Research Opportunities in Computer Science" />
+  <meta property="og:description"
+    content="Join ACM ROCS 2024 at IIIT Kottayam - A premier workshop on Research Opportunities in Computer Science. September 26-27, 2024." />
+  <meta property="og:type" content="website" />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@lovable_dev" />
+</head>
+
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
