--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ACM ROCS 2024 - Research Opportunities in Computer Science | BMSCE</title>
   <meta name="description"
-    content="Join ACM ROCS 2024 at IIIT Kottayam - A premier workshop on Research Opportunities in Computer Science. September 26-27, 2024. Expert speakers, workshops, and networking." />
-  <meta name="author" content="Lovable" />
+    content="Join ACM ROCS 2024 at BMSCE - A premier workshop on Research Opportunities in Computer Science. September 26-27, 2025. Expert speakers, workshops, and networking." />
+  <meta name="author" content="BMSCE" />
 
-  <meta property="og:title" content="ACM ROCS 2024 - Research Opportunities in Computer Science" />
+  <meta property="og:title" content="ACM ROCS 2025 - Research Opportunities in Computer Science" />
   <meta property="og:description"
-    content="Join ACM ROCS 2024 at IIIT Kottayam - A premier workshop on Research Opportunities in Computer Science. September 26-27, 2024." />
+    content="Join ACM ROCS 2025 at BMSCE - A premier workshop on Research Opportunities in Computer Science. September 26-27, 2025. Expert speakers, workshops, and networking." />
   <meta property="og:type" content="website" />
 
   <meta name="twitter:card" content="summary_large_image" />
